# rush

./: .gitignore  AmbrosioModelfile  Cargo.toml  README.md  energienie.py  rush_context_storage.txt  whisperSetup.sh
.github/workflows/: AutomaticDeploy.yml  buildAndTest.yml  checkAndRelease.yml  deploy.yaml  deployScript.sh
.github_old/workflows/: AutomaticDeploy.yml
brains/: Makefile  a.out  brains  main.c
brains/src/: a.out  fifoHandler.c  fifoHandler.h  main.c  readfifo.c
discord/: main.py
docs/: rushArchitecture.drawio
esp8266/: Main.ino  hardware.h  logic.h  network.h
esp8266/Main/: Main.ino  logic.h
goExperiments/main/: go.mod
goExperiments/telegramBot/: go.mod
mysite/: db.sqlite3
mysite.old/polls/: admin.py  models.py
mysite/polls/: urls.py  views.py
old/mysite/: db.sqlite3
old/mysite.old/: db.sqlite3
old/rush/: db.sqlite3
old/scripts/: sleep.sh
old/telegram/: aux.py  (+4 more)
scripts/: setup_systemd_service.py  whisper_setup.py
src/: commands.rs  cygnus_ctrl_fsm.rs  designNotes.md  desktop_control_fsm.rs  get_ambient_fsm.rs  get_env_fsm.rs  light_ctrl_fsm.rs  light_livingroom_ctrl_fsm.rs  llm_wrapper.rs  main.rs  office_env_fsm.rs  snowdog_ctrl_fsm.rs  telegram_bot.rs  thinkpad_ctrl_fsm.rs  thinkpad_dock_control_fsm.rs  tui.rs
telegram/: Desktop.py  Rpi.py  Server.py  ThreadWithReturnValue.py  api_key.py  botHandler.py  bot_handler.py  commandHandler.py  fifoHandler.py  fiforeader.py  main.py  pom.xml  rpi.py  system.py
telegram-java/: pom.xml
telegram.old/: pom.xml
telegram_java/: build.gradle  dependency-reduced-pom.xml
(+52 files in other folders)
