[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.22"
openssh = "0.11.0"
ping-rs = "0.1.2"
pretty_env_logger = "0.5.0"
teloxide = "0.12.2"
tokio = { version = "1", features = ["full"] }
