[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
curl = "0.4.46"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.22"
openssh = "0.11.0"
ping-rs = "0.1.2"
ratatui = "0.28.1"
regex = "1.10.6"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
strum = "0.26.3"
teloxide = "0.12.2"
tokio = { version = "1", features = ["full"] }
